--- a/mooremarket.html
+++ b/mooremarket.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="bootstrap.css">
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 <title>Moore Market</title>
 </head>
 <body>
